# silly

./: .gitignore  MANIFEST.in  Makefile  README.md  flake.nix  get_owl.sh  pyproject.toml  shell.nix  silly-entry  staticgen.py  stress.py  test.py
.github/workflows/: test.yml
modules/activitypub/: __init__.py  __manifest__.py  activitypub.py  get_user.py  models.py  routes.py  webfinger.py
modules/activitypub/data/: data.xml
modules/activitypub/templates/: templates.xml
modules/cron_samples/: __manifest__.py
modules/cron_samples/data/: cron.xml
modules/html_base/: __init__.py
modules/html_base/templates/: html_base.xml
modules/webclient/: .gitignore  __manifest__.py
modules/webclient/static/: formController.js  listController.js  root.js
modules/webclient/templates/: index.xml
modules/webclient_nojs_samples/: __init__.py  __manifest__.py  menu.py  models.py  view.py
modules/webclient_nojs_samples/templates/: inherit_test.xml
modules/webclient_nojs_samples/views/: views.xml
modules/webfinger/: __init__.py  webfinger.py
silly/: .gitignore  __init__.py  cli.py  config.py  cron.py  exceptions.py  globalvars.py  http.py  main.py  mod.py  model.py  modload.py  renderer.py  sillyorm_ext.py  tests.py  tools.py  xmlids.py
silly/frontend/: root.js
silly/modules/activitypub/: __init__.py  __manifest__.py  get_user.py  models.py  routes.py
silly/modules/assetbundle/: __init__.py  asset_compiler.py
silly/modules/core/: __init__.py  __manifest__.py  routes.py
silly/modules/cron/: __manifest__.py  cron.py
silly/modules/fastapi/: __init__.py  dependencies.py  routes.py
silly/modules/fastapi_sample/: __init__.py  __manifest__.py  models.py  sample.py
(+119 files in other folders)
