[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "silly"
version = "0.0.1"
description = "TODO"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
dependencies = [
    "sillyorm==0.4.0",
    "flask",
    "lxml",
]

[project.optional-dependencies]
postgres = ["psycopg2"]
dev = [
    "psycopg2", "types-psycopg2",
    "pytest", "coverage", "pylint", "mypy", "black", "Sphinx",
]

[tool.setuptools]
packages = ["silly", "silly.modules"]
