[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "silly"
version = "0.0.1"
description = "TODO"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
dependencies = [
    "sillyorm==1.0.0",
    "lxml",
    "starlette",
    "hypercorn",
]

[project.optional-dependencies]
dev = [
    "coverage", "pylint", "mypy", "black", "Sphinx",
]

[project.scripts]
silly = "silly.cli:entry_noargs"

[tool.setuptools]
packages = ["silly", "silly.modules"]
